--- a/rf-j.properties
+++ b/rf-j.properties
@@ -1,3 +1,1 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/cupujava
-#horario.reset.senha=0 1 10 * * * 
-#reset.at.startup=false
+spring.datasource.url=jdbc:mysql://localhost:3306/shortener
